--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -290,6 +290,7 @@
 			.table-price {
 				border: 1px solid $border-color;
 				margin-left: 0;
+				margin-right: 15px;
 				div {
 					border: 1px solid $border-color;
 					padding: 12px 0 12px 24px;
