--- a/public/scss/partials/_variables.scss
+++ b/public/scss/partials/_variables.scss
@@ -10,6 +10,7 @@ $bg2: #f0f0f1;
 $bg3: #f4f4f4;
 $bgfooter: #353535;
 $grey: #c4c4c4;
+$lightgrey: #898989;
 $darkgrey: #595959;
 $lightblue: #84F0F3;
 $font-color: #595959;
