--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11202,26 +11202,27 @@ section.home-footer .row > div {
           color: #1b1b1b;
           text-decoration: underline; }
       .salon#content section.salon-content section .table-price {
-        border: 1px solid #f4f4f4;
+        border: 0px;
         padding-left: 0;
         margin-left: -16px;
         margin-right: 15px; }
         .salon#content section.salon-content section .table-price div {
-          border: 1px solid #f9f9f9;
           padding-left: 24px;
-          text-align: center;
           height: 20px; }
-          .salon#content section.salon-content section .table-price div:nth-child(2n + 1) {
+          .salon#content section.salon-content section .table-price div.title {
+            height: 35px; }
+            .salon#content section.salon-content section .table-price div.title:nth-child(1n + 2) {
+              line-height: 35px; }
+          .salon#content section.salon-content section .table-price div:nth-child(2n) {
             background-color: #f4f4f4; }
           .salon#content section.salon-content section .table-price div p {
             margin-bottom: 2px;
             text-align: left;
             color: #343434;
-            font-size: 1.4em; }
-            .salon#content section.salon-content section .table-price div p span {
-              text-transform: uppercase;
-              font-weight: bolder;
-              color: #898989; }
+            font-size: 1.4em;
+            text-transform: uppercase;
+            font-weight: bolder;
+            color: #898989; }
     .salon#content section.salon-content #avis .row {
       padding-left: 15px;
       padding-right: 15px;
