--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -288,28 +288,30 @@
 				}
 			}
 			.table-price {
-				border: 1px solid $bg3;
+				border: 0px;
 				padding-left: 0;
 				margin-left: -16px;
 				margin-right: 15px;
 				div {
-					&:nth-child(2n + 1) {
+					&.title {
+						height: 35px;
+						&:nth-child(1n + 2) {
+							line-height: 35px;
+						}
+					}
+					&:nth-child(2n) {
 						background-color: $bg3;
 					}
-					border: 1px solid $border-color;
 					padding-left: 24px;
-					text-align: center;
 					height: 20px;
 					p {
 						margin-bottom: 2px;
 						text-align: left;
 						color: #343434;
 						font-size: 1.4em;
-						span {
-							text-transform: uppercase;
-							font-weight: bolder;
-							color: $lightgrey;
-						}
+						text-transform: uppercase;
+						font-weight: bolder;
+						color: $lightgrey;
 					}
 				}
 			}
