--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -232,6 +232,7 @@
 			border-bottom: 2px solid $border-color;
 			h4 {
 				color: #343434;
+				margin-bottom: 3px;
 			}
 			h3 {
 				margin-left: -15px;
