--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11161,8 +11161,7 @@ section.home-footer .row > div {
           padding-left: 15px;
           padding-right: 15px; } }
       .salon#content section.salon-content section h4 {
-        color: #343434;
-        margin-bottom: 3px; }
+        color: #343434; }
       .salon#content section.salon-content section h3 {
         margin-left: -15px; }
       .salon#content section.salon-content section .row {
@@ -11203,27 +11202,20 @@ section.home-footer .row > div {
           color: #1b1b1b;
           text-decoration: underline; }
       .salon#content section.salon-content section .table-price {
-        border: 0px;
-        padding-left: 0;
-        margin-left: -16px;
+        border: 1px solid #f9f9f9;
+        margin-left: 0;
         margin-right: 15px; }
         .salon#content section.salon-content section .table-price div {
-          padding-left: 24px;
-          height: 20px; }
-          .salon#content section.salon-content section .table-price div.title {
-            height: 35px; }
-            .salon#content section.salon-content section .table-price div.title:nth-child(1n + 2) {
-              line-height: 35px; }
-          .salon#content section.salon-content section .table-price div:nth-child(2n) {
-            background-color: #f4f4f4; }
+          border: 1px solid #f9f9f9;
+          padding: 12px 0 12px 24px;
+          text-align: center; }
           .salon#content section.salon-content section .table-price div p {
             margin-bottom: 2px;
             text-align: left;
             color: #343434;
-            font-size: 1.4em;
-            text-transform: uppercase;
-            font-weight: bolder;
-            color: #898989; }
+            font-size: 1.4em; }
+            .salon#content section.salon-content section .table-price div p span {
+              text-decoration: underline; }
     .salon#content section.salon-content #avis .row {
       padding-left: 15px;
       padding-right: 15px;
@@ -11254,16 +11246,11 @@ section.home-footer .row > div {
           z-index: 10000;
           margin-bottom: 0px; } }
     .salon#content .sidebar section#location {
-      margin-bottom: 20px; }
+      margin-top: 50px; }
       .salon#content .sidebar section#location .map {
-        width: 100%;
+        height: 247px;
         background: url(../img/placeholder-map.jpg) no-repeat center center;
         background-size: cover; }
-        .salon#content .sidebar section#location .map:before {
-          content: "";
-          display: block;
-          padding-top: 100%;
-          /* initial ratio of 1:1*/ }
     .salon#content .sidebar:before {
       content: " ";
       width: 200vw;
@@ -11291,7 +11278,7 @@ section.home-footer .row > div {
         .salon#content .sidebar .calendar {
           display: none; } }
     .salon#content .sidebar .phone {
-      margin-bottom: 20px; }
+      margin-top: 95px; }
       .salon#content .sidebar .phone .btn-phone {
         position: relative;
         width: 100%;
@@ -11323,7 +11310,7 @@ section.home-footer .row > div {
       position: relative;
       margin-bottom: 80px; }
       .salon#content .sidebar .promo-sidebar img {
-        border-radius: 4px;
+        border-radius: 5px;
         -webkit-filter: brightness(50%);
         -moz-filter: brightness(50%);
         -ms-filter: brightness(50%);
