--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -270,10 +270,10 @@
 			.coiffeur {
 				img {
 					display: block;
-					width: 14em;
+					width: 10em;
 					border-radius: 100%;
 					margin: 0 auto 20px;
-					border: 10px solid $bg2;
+					border: 6px solid $bg2;
 				}
 				p > a {
 					font-size: 1em;
@@ -303,6 +303,9 @@
 					&:nth-child(2n) {
 						background-color: $bg3;
 					}
+					&:last-child {
+						//margin-bottom: 15px;
+					}
 					padding-left: 24px;
 					height: 20px;
 					p {
@@ -313,6 +316,16 @@
 						text-transform: uppercase;
 						font-weight: bolder;
 						color: $lightgrey;
+					}
+
+					span.price {
+						float: right;
+					}
+				}
+
+				&:not(:first-child) {
+					div.title {
+						margin-top: 15px;
 					}
 				}
 			}
