--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10181,6 +10181,8 @@ footer.mobile {
       @media screen and (max-width: 767px) {
         .landing .headline p {
           display: none; } }
+  .landing .choice .search-word {
+    font-size: 2.6em; }
   .landing .choice .btn-red {
     height: 58px;
     font-size: 1.4em;
@@ -10226,10 +10228,13 @@ section.home-section {
     font-family: "Lato", sans-serif;
     font-weight: 400;
     letter-spacing: 3px;
-    padding: 50px 0;
+    padding: 30px 0 10px;
     margin: 0;
     font-size: 2.4em;
     color: #595959; }
+  section.home-section p.subtitle {
+    font-size: 1.6em;
+    margin-bottom: 15px; }
   section.home-section figure {
     overflow: hidden;
     background-color: #595959; }
@@ -10259,10 +10264,11 @@ section.home-section {
   section.home-section .btn.home-cta, section.home-section .home-cta.btn-red, section.home-section .home-cta.btn-blue, section.home-section .home-cta.btn-orange, section.home-section .home-cta.btn-green, section.home-section .home-cta.btn-white, section.home-section .home-cta.btn-book, section.home-section .home-cta.btn-frame, section.home-section .home-cta.btn-frame-blue, section.home-section .home-cta.btn-frame-red, section.home-section .home-cta.btn-frame-yellow, section.home-section .home-cta.btn-frame-green, section.home-section .home-cta.btn-frame-orange, section.home-section .home-cta.btn-frame-darkgrey {
     display: block;
     margin: 40px auto 0;
+    text-transform: uppercase;
     float: none !important; }
 
 .choice {
-  margin-top: 90px; }
+  margin-top: 60px; }
 
 .landing .main-searchbar, .home-search .main-searchbar {
   padding: 20px;
