--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -26,7 +26,7 @@
         font-weight: $regular;
     }
     .headline {
-        margin: 100px auto 0;
+        margin: 70px auto 0;
         height: 132px;
         @include nofloat;
         h1 {
@@ -44,7 +44,8 @@
     }
     .choice {
         .search-word {
-            font-size: 2.6em;
+            font-size: 2.3em;
+            text-transform: uppercase;
         }
         .btn-red {
             height: 58px;
