--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11265,6 +11265,7 @@ section.home-footer .row > div {
       margin-bottom: 20px; }
       .salon#content .sidebar section#location .map {
         width: 100%;
+        height: 100%;
         background: url(../img/placeholder-map.jpg) no-repeat center center;
         background-size: cover; }
         .salon#content .sidebar section#location .map:before {
