--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -363,6 +363,7 @@
 			margin-bottom: 20px;
 			.map {
 				width: 100%;
+				height: 100%;
 				background: url(../img/placeholder-map.jpg) no-repeat center center;
 				background-size:cover;
 				&:before{
