--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8695,6 +8695,9 @@ div#app {
 .green {
   color: #20af69 !important; }
 
+.darkgrey {
+  color: #595959 !important; }
+
 .red {
   color: #fc5a5f !important; }
 
@@ -9686,22 +9689,33 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
   border-bottom: 1px solid #f9f9f9;
   padding: 20px; }
   .comments .single-comment .user-profil {
-    width: 35px;
-    height: 35px;
     margin: 0 auto;
+    float: left;
+    height: 80px;
     position: relative;
     border-radius: 2px;
-    overflow: hidden;
-    margin-right: 13px; }
+    overflow: hidden; }
     .comments .single-comment .user-profil img {
-      width: 35px;
-      height: 35px;
+      width: 80px;
+      height: 80px;
+      border-radius: 100%;
       position: absolute;
       top: 0;
       left: 0;
       bottom: 0;
       right: 0;
       margin: auto; }
+      .comments .single-comment .user-profil img.placeholder {
+        padding: 10px;
+        border-color: #CDC4C4;
+        border-width: 3px;
+        border-style: solid; }
+  .comments .single-comment div div.title {
+    overflow: auto; }
+    .comments .single-comment div div.title p {
+      font-size: 1.6em;
+      font-weight: bold;
+      display: inline; }
   .comments .single-comment div p {
     margin-bottom: 0;
     letter-spacing: 1px;
@@ -11148,14 +11162,28 @@ section.home-footer .row > div {
       font-family: "Source Sans Pro", sans-serif; }
     .salon#content section.salon-content > .row {
       background-color: white; }
-    .salon#content section.salon-content ul.nav li:first-child .icon-nav {
-      background: url(../img/icon-salon-nav1.jpg) no-repeat center center; }
-    .salon#content section.salon-content ul.nav li:nth-child(2) .icon-nav {
-      background: url(../img/icon-salon-nav2.jpg) no-repeat center center; }
-    .salon#content section.salon-content ul.nav li:last-child {
+    .salon#content section.salon-content ul.nav li a {
+      padding-top: 55px; }
+    .salon#content section.salon-content ul.nav li .icon-nav {
+      width: 40px;
+      height: 35px;
+      left: calc(50% - 15px); }
+    .salon#content section.salon-content ul.nav li:not(.active):first-child .icon-nav {
+      background: url(../img/icons/info.png) no-repeat center center; }
+    .salon#content section.salon-content ul.nav li:not(.active):nth-child(2) .icon-nav {
+      background: url(../img/icons/avis.png) no-repeat center center; }
+    .salon#content section.salon-content ul.nav li:not(.active):last-child {
       border-right: none; }
-      .salon#content section.salon-content ul.nav li:last-child .icon-nav {
-        background: url(../img/icon-salon-nav3.jpg) no-repeat center center; }
+      .salon#content section.salon-content ul.nav li:not(.active):last-child .icon-nav {
+        background: url(../img/icons/hairfie.png) no-repeat center center; }
+    .salon#content section.salon-content ul.nav li.active:first-child .icon-nav {
+      background: url(../img/icons/info-selected.png) no-repeat center center; }
+    .salon#content section.salon-content ul.nav li.active:nth-child(2) .icon-nav {
+      background: url(../img/icons/avis-selected.png) no-repeat center center; }
+    .salon#content section.salon-content ul.nav li.active:last-child {
+      border-right: none; }
+      .salon#content section.salon-content ul.nav li.active:last-child .icon-nav {
+        background: url(../img/icons/hairfie-selected.png) no-repeat center center; }
     .salon#content section.salon-content section {
       padding-bottom: 35px;
       border-bottom: 2px solid #f9f9f9; }
