--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -169,7 +169,9 @@ ul {
 		background: url(../img/star.png) no-repeat center center;
 		background-size:100%;
 		margin: 6px;
-		cursor: pointer;
+		&.interactive {
+			cursor: pointer;
+		}
 
 		display: block;
 		position: relative;
@@ -184,7 +186,7 @@ ul {
 			background-size:100%;
 			position: absolute; top: 0;left: 0;bottom: 0;right: 0;margin: auto;
 		}
-		&:hover {
+		&:hover.interactive {
 			&:after {
 				opacity: 1;
 				@include transition(all 0.15s ease-out);
@@ -688,7 +690,7 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
 			position: relative;
 			border-radius: 2px;
 			overflow: hidden;
-			img{
+			img {
 				&.placeholder {
 					padding: 10px;
 					border-color: #CDC4C4;
@@ -705,6 +707,10 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
 		div {
 			div.title {
 				overflow: auto;
+				.gender-symbol {
+					font-size: 1.5em;
+					color: #343434;
+				}
 				p {
 					font-size: 1.6em;
 					font-weight: bold;
