--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -211,24 +211,30 @@
 				.icon-nav {
 					width: 40px;
 					height: 35px;
-					left: calc(50% - 15px);
+					left: 0;
+					right: 0;
+					margin-left: auto;
+					margin-right: auto;
 				}
 			}
 			li:not(.active) {
 				&:first-child {
 					.icon-nav {
 						background: url(../img/icons/info.png) no-repeat center center;
+						background-size: contain;
 					}
 				}
 				&:nth-child(2) {
 					.icon-nav {
 						background: url(../img/icons/avis.png) no-repeat center center;
+						background-size: contain;
 					}
 				}
 				&:last-child {
 					border-right: none;
 					.icon-nav {
 						background: url(../img/icons/hairfie.png) no-repeat center center;
+						background-size: contain;
 					}
 				}
 			}
@@ -236,17 +242,20 @@
 				&:first-child {
 					.icon-nav {
 						background: url(../img/icons/info-selected.png) no-repeat center center;
+						background-size: contain;
 					}
 				}
 				&:nth-child(2) {
 					.icon-nav {
 						background: url(../img/icons/avis-selected.png) no-repeat center center;
+						background-size: contain;
 					}
 				}
 				&:last-child {
 					border-right: none;
 					.icon-nav {
 						background: url(../img/icons/hairfie-selected.png) no-repeat center center;
+						background-size: contain;
 					}
 				}
 			}
