--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -196,6 +196,23 @@
 		margin-top: 20px;
 		margin-bottom: 70px;
 
+		div.reviews-title {
+			a {
+				color: $hairfie;
+				font-size: 2.3em;
+    			font-weight: bolder;
+    			text-decoration: underline;
+			}
+			p {
+				margin: 0;
+				color: $darkgrey;
+				font-size: 2.3em;
+    			font-weight: bolder;
+			}
+			margin-top: 20px;
+			margin-bottom: 30px;
+		}
+
 		h5 {
 			font-family: $font-main;
 		}
