--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9696,6 +9696,9 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
     position: relative;
     border-radius: 2px;
     overflow: hidden; }
+    @media screen and (max-width: 767px) {
+      .comments .single-comment .user-profil {
+        height: 50px; } }
     .comments .single-comment .user-profil img {
       width: 80px;
       height: 80px;
@@ -9711,10 +9714,14 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
         border-color: #CDC4C4;
         border-width: 3px;
         border-style: solid; }
+      @media screen and (max-width: 767px) {
+        .comments .single-comment .user-profil img {
+          width: 50px;
+          height: 50px; } }
   .comments .single-comment div div.title {
     overflow: auto; }
     .comments .single-comment div div.title .gender-symbol {
-      font-size: 1.5em;
+      font-size: 1.3em;
       color: #343434; }
     .comments .single-comment div div.title p {
       font-size: 1.6em;
@@ -11167,13 +11174,13 @@ section.home-footer .row > div {
       margin-bottom: 30px; }
       .salon#content section.salon-content div.reviews-title a {
         color: #fe5b5f;
-        font-size: 2.3em;
+        font-size: 2em;
         font-weight: bolder;
         text-decoration: underline; }
       .salon#content section.salon-content div.reviews-title p {
         margin: 0;
         color: #595959;
-        font-size: 2.3em;
+        font-size: 2em;
         font-weight: bolder; }
     .salon#content section.salon-content h5 {
       font-family: "Source Sans Pro", sans-serif; }
