--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -725,7 +725,7 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
 				}
 			}
 			p {
-				margin-bottom: 0;
+				margin-bottom: 5px;
 				letter-spacing: 1px;
 				color: #343434;
 			}
