--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -191,8 +191,7 @@
 				}
 			}
 			.horaires {
-    			margin-bottom: 15px;
-    			padding: 10px;
+    			margin: 15px 0 15px 0;
     				* { 
     					display: inline-block;
     					margin: 0;
@@ -216,17 +215,14 @@
     					padding-right: 20px;
 					}
 					.today {
+						min-height: 100%;
 						background-color: #f8f8f8;
 						border-radius: 5px;
 						margin-left: -10px;
-						padding-left: 20px; padding-right: 20px;
-						padding-top: 2px;
-						height: 100%;
+						padding: 2px 20px 0 20px;
     					position: absolute;
-    					span {
-    						font-size: 2em;
-    						color: #666b74;
-    					}
+    					font-size: 2em;
+    					color: #666b74;
 					}
 				}
 			}
