--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11197,35 +11197,33 @@ section.home-footer .row > div {
       left: 0;
       right: 0;
       margin-left: auto;
-      margin-right: auto; }
+      margin-right: auto;
+      background-repeat: no-repeat; }
     .salon#content section.salon-content ul.nav li:not(.active):first-child .icon-nav {
-      -webkit-mask: url(../img/icons/info.svg) no-repeat 100% 100%;
-      mask: url(../img/icons/info.svg) no-repeat 100% 100%;
-      background-color: #666b74; }
+      /* @include mask(url(../img/icons/info.svg) no-repeat 100% 100%);
+						background-color: #666b74;
+						*/
+      background-image: url(../img/icons/info.png);
+      background-size: contain; }
     .salon#content section.salon-content ul.nav li:not(.active):nth-child(2) .icon-nav {
-      -webkit-mask: url(../img/icons/avis.svg) no-repeat 100% 100%;
-      mask: url(../img/icons/avis.svg) no-repeat 100% 100%;
-      background-color: #666b74; }
+      background-image: url(../img/icons/avis.png);
+      background-size: contain; }
     .salon#content section.salon-content ul.nav li:not(.active):last-child {
       border-right: none; }
       .salon#content section.salon-content ul.nav li:not(.active):last-child .icon-nav {
-        -webkit-mask: url(../img/icons/hairfie.svg) no-repeat 100% 100%;
-        mask: url(../img/icons/hairfie.svg) no-repeat 100% 100%;
-        background-color: #666b74; }
+        background-image: url(../img/icons/hairfie.png);
+        background-size: contain; }
     .salon#content section.salon-content ul.nav li.active:first-child .icon-nav {
-      -webkit-mask: url(../img/icons/info.svg) no-repeat 100% 100%;
-      mask: url(../img/icons/info.svg) no-repeat 100% 100%;
-      background-color: #fe5b5f; }
+      background-image: url(../img/icons/info-selected.png);
+      background-size: contain; }
     .salon#content section.salon-content ul.nav li.active:nth-child(2) .icon-nav {
-      -webkit-mask: url(../img/icons/avis.svg) no-repeat 100% 100%;
-      mask: url(../img/icons/avis.svg) no-repeat 100% 100%;
-      background-color: #fe5b5f; }
+      background-image: url(../img/icons/avis-selected.png);
+      background-size: contain; }
     .salon#content section.salon-content ul.nav li.active:last-child {
       border-right: none; }
       .salon#content section.salon-content ul.nav li.active:last-child .icon-nav {
-        -webkit-mask: url(../img/icons/hairfie.svg) no-repeat 100% 100%;
-        mask: url(../img/icons/hairfie.svg) no-repeat 100% 100%;
-        background-color: #fe5b5f; }
+        background-image: url(../img/icons/hairfie-selected.png);
+        background-size: contain; }
     .salon#content section.salon-content section {
       padding-bottom: 35px;
       border-bottom: 2px solid #f9f9f9; }
