--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -718,6 +718,8 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
 				.gender-symbol {
 					font-size: 1.3em;
 					color: #343434;
+					font-family: Arial;
+					margin-left: 10px;
 				}
 				p {
 					font-size: 1.6em;
