--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11141,7 +11141,7 @@ section.home-footer .row > div {
         border-radius: 20px; }
       .salon#content .main-content section.salon-info div.timetable {
         font-size: small;
-        margin-top: 15px; }
+        margin-top: 20px; }
         .salon#content .main-content section.salon-info div.timetable span {
           padding: 0; }
         @media screen and (max-width: 480px) {
@@ -11182,15 +11182,18 @@ section.home-footer .row > div {
             margin: 0;
             display: inline-block;
             color: #fe5b5f;
-            padding-left: 10px;
             font-size: 1.8em;
             font-weight: bold;
             border: solid #f8f8f8;
             border-width: 2px;
-            padding-top: 2px;
-            padding-bottom: 2px;
-            border-radius: 5px;
-            padding-right: 20px; }
+            padding: 2px 20px 2px 10px;
+            border-radius: 5px; }
+            @media screen and (max-width: 767px) {
+              .salon#content .main-content section.salon-info .horaires a .title {
+                font-size: 1.4em; } }
+            @media screen and (max-width: 350px) {
+              .salon#content .main-content section.salon-info .horaires a .title {
+                font-size: 1.3em; } }
           .salon#content .main-content section.salon-info .horaires a .today {
             min-height: 100%;
             background-color: #f8f8f8;
@@ -11200,6 +11203,12 @@ section.home-footer .row > div {
             position: absolute;
             font-size: 1.8em;
             color: #666b74; }
+            @media screen and (max-width: 767px) {
+              .salon#content .main-content section.salon-info .horaires a .today {
+                font-size: 1.4em; } }
+            @media screen and (max-width: 350px) {
+              .salon#content .main-content section.salon-info .horaires a .today {
+                font-size: 1.3em; } }
   .salon#content section.salon-content {
     margin-top: 20px;
     margin-bottom: 70px; }
